--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,18 +2,20 @@ log4j.rootLogger=debug, stdout,fileInfoAppender,fileErrorAppender
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.Threshold=debug
+log4j.appender.stdout.Threshold=info
 log4j.appender.stdout.ImmediateFlush=true
 log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}][%-5p][%l]%m%n
 
 log4j.appender.fileInfoAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.fileInfoAppender.ImmediateFlush=true
+log4j.appender.fileInfoAppender.Threshold=info
 log4j.appender.fileInfoAppender.File= D:\\logs\\myRpcServer_info.log
 log4j.appender.fileInfoAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileInfoAppender.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}][%-5p][%l]%m%n
 
 log4j.appender.fileErrorAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.fileErrorAppender.ImmediateFlush=true
+log4j.appender.fileErrorAppender.Threshold=error
 log4j.appender.fileErrorAppender.File= D:\\logs\\myRpcServer_error.log
 log4j.appender.fileErrorAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileErrorAppender.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}][%-5p][%l]%m%n
